--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,9 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: JavaToolInstaller@0
+  inputs:
+    versionSpec: '16'
+    jdkArchitectureOption: 'x64'
+    jdkSourceOption: 'PreInstalled'
+    displayName: 'Installing Java 16'
