--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,12 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: JavaToolInstaller@0
+  inputs:
+    versionSpec: '16'
+    jdkArchitectureOption: 'x64'
+    jdkSourceOption: 'PreInstalled'
+    displayName: 'Installing Java 16'
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
